--- a/WebRoot/index_bak.html
+++ b/WebRoot/index_bak.html
@@ -11,7 +11,7 @@
  	 <p>
   	<a href="" id="admin_demo">管理员登录</a>
   	
-  
+  	<a >测试下是否成功</a>
     <script src="bootstrap/js/jquery-1.9.1.js"></script>
     <script src="js/common.js"></script>
     <script>
