--- a/WebRoot/list.html
+++ b/WebRoot/list.html
@@ -16,7 +16,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/fineuploader.css" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-color:#157B48">
 <div class="pagewrap">
 <div class="container-fluid">
 <!--     <div class="row top">
@@ -56,9 +56,13 @@
 				      </a>
 				      <div class="nav-collapse collapse">
 					    <ul class="nav pull-right">
-					      <li class="dhlhide" id="set"><a href="setting.html" id="sethref">设置</a></li>
+					    <li style="margin-top:12px;margin-right:-10px;"><span id="greeting">您好！</span></li>
+											<li class="usernamemargin"><a id="username"></a></li>
+												<li class="dhlhide" id="set" style="margin-left:-10px;"><a href="setting.html"
+													id="sethref"><i class="icon-cog"></i></a></li>
+					      <!-- <li class="dhlhide" id="set"><a href="setting.html" id="sethref">设置</a></li>
 					      <li><a><img src="" id="userimg"/></a></li>
-					      <li><a id="username"></a></li>
+					      <li><a id="username"></a></li> -->
 					    </ul>
 				      </div>
 			  </div>
@@ -75,7 +79,7 @@
     <div class="row-fluid">
     	<div class="span12" id="place"></div>
     </div>
-	<div class="row-fluid">
+	<div class="row-fluid" style="background-color:#FFF;">
 	    <!-- list -->
 	    <div class="span8">
 	    	<div class="row-fluid">	
@@ -85,7 +89,9 @@
 		    	<div id="casetop"></div>
 	    	</div>
 	    	<div class="row-fluid">	
-	    		<div class="span12 h40"><div class="right"><button class="btn btn-warning" id="addbutton"><i class="icon-plus"></i>增加</button></div></div>   		
+	    		<div class="span12 h40"><div class="right"><button class="btn btn-warning" id="addbutton"><i class="icon-plus"></i>增加</button>
+	    		<!-- <a href="setting.html"><button class="btn btn-warning" id="setbutton"><i class="icon-cog"></i>设置</button></a> -->
+	    		</div></div>   		
 	    	</div>
 	    	<div class="row-fluid">	
 		    	<div id="caselist"></div>
@@ -116,18 +122,21 @@
 </div>
 </div>
 
-    <div class="footer">
-		<div class="footerCon">
-			<div class="copyright">
-				<p>版权所有：无锡旅游商贸高等职业技术学校   COPYRIGHT © 2010 ALL RIGHTS RESERVED </p>
-				<p>地址：无锡市广石路999号 <span>电话：0510-83116678</span>    <span> 苏ICP备:09007163</span>技术支持：南京第五十五所技术开发有限公司</p>
-			</div>
-			<div class="logobottom">
-				<img src="images/logobottom.gif"/>
-			</div>
-			<div class="clear"></div>
-		</div>
-	</div>
+   <!--  <div class="footer"> -->
+		<div class="footerCon" style="background-color:#E8E8E8;width:980px; margin: 0 auto;">
+					<div class="copyright">
+						<p style="padding-left:5px;">版权所有：无锡旅游商贸高等职业技术学校 COPYRIGHT © 2010 ALL RIGHTS RESERVED</p>
+						<p>
+							地址：无锡市广石路999号 <span>电话：0510-83116678</span> <span>
+								苏ICP备:09007163</span>技术支持：南京第五十五所技术开发有限公司
+						</p>
+					</div>
+					<div class="logobottom">
+						<img src="images/logobottom.gif" />
+					</div>
+					<div class="clear"></div>
+				</div>
+	<!-- </div> -->
 	
 		<div id="syModal" class="modal hide fade">
     <div class="modal-header">
@@ -497,13 +506,13 @@
 						var tmp = '<table class="table"><tr><th><div align="right">课程列表 · '+a.length+'课时<div></th></tr>';						
 						for(var i=0,l=a.length;i<l;i++){
 			    			var index = i+1;
-			    			//tmp += '<div class="span8 card"><span class="livcenter"><a href="'+a[i].url+'" target="_blank">'+index+'&nbsp;&nbsp;'+a[i].name+'</a></span><span class="right"><a href="#"  class="thumbnail noborder"><img class="imgh" src="'+a[i].imgPath+'"></a></span></div>';
+			    			//tmp += '<div class="span8 card"><span class="livcenter"><a href="'+a[i].url+'" target="_blank">'+index+'&nbsp;&nbsp;'+a[i].name+'</a></span><span class="iconright"><a href="#"  class="thumbnail noborder"><img class="imgh" src="'+a[i].imgPath+'"></a></span></div>';
 			    			var tmp0 = '';
 			    			if (isadmin)
 			    			{
-			    				tmp0 += '<a href="javascript:updateCasecontent('+a[i].id+')" class="icon-pencil dhltop3"></a>&nbsp;&nbsp;<a href="javascript:delCasecontent('+a[i].id+')" class="icon-trash dhltop3"></a>&nbsp;&nbsp;';
+			    				tmp0 += '<a href="javascript:updateCasecontent('+a[i].id+')" class="icon-pencil dhltop4"></a>&nbsp;&nbsp;<a href="javascript:delCasecontent('+a[i].id+')" class="icon-trash dhltop4"></a>&nbsp;&nbsp;';
 			    			}
-			    			tmp += '<tr><td><span class="livcenter"><a href="'+a[i].url+'" target="_blank">'+index+'&nbsp;&nbsp;'+a[i].name+'&nbsp;&nbsp;&nbsp;&nbsp;'+a[i].content+'</a><span class="right">'+tmp0+'<a class="noborder"><img class="imgh" src="'+a[i].imgPath+'"></a></span></td></tr>';
+			    			tmp += '<tr><td><span class="livcenter"><a href="'+a[i].url+'" target="_blank">'+index+'&nbsp;&nbsp;'+a[i].name+'&nbsp;&nbsp;&nbsp;&nbsp;'+a[i].content+'</a><span class="iconright">'+tmp0+'<a class="noborder"><img class="imgh" src="'+a[i].imgPath+'"></a></span></td></tr>';
 						} 
 						tmp += '</table>';						
 						$("#caselist").html(tmp);
